Replace obsolete ${pom.*} with ${project.*}
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@936251 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-benchmark/pom.xml
+++ b/httpcore-benchmark/pom.xml
@@ -52,19 +52,19 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpcore</artifactId>
-      <version>${pom.version}</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpcore-nio</artifactId>
-      <version>${pom.version}</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpcore-ab</artifactId>
-      <version>${pom.version}</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
