--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
       <artifactId>httpcore</artifactId>
-      <version>${pom.version}</version>
+      <version>${project.version}</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
