--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -65,6 +65,12 @@
     <maven.compile.target>1.3</maven.compile.target>
     <maven.compile.optimize>true</maven.compile.optimize>
     <maven.compile.deprecation>true</maven.compile.deprecation>
+    <!-- default compiler and surefire plugin settings for "java" profiles -->
+    <httpcore.compiler.fork>false</httpcore.compiler.fork>
+    <httpcore.compiler.compilerVersion />
+    <httpcore.compiler.javac />
+    <httpcore.surefire.java />
+    <httpcore.surefire.version>2.4.3</httpcore.surefire.version>
   </properties>
 
   <build>
@@ -108,10 +114,17 @@
           <target>${maven.compile.target}</target>
           <optimize>${maven.compile.optimize}</optimize>
           <showDeprecations>${maven.compile.deprecation}</showDeprecations>
+          <fork>${httpcore.compiler.fork}</fork>
+          <compilerVersion>${httpcore.compiler.compilerVersion}</compilerVersion>
+          <executable>${httpcore.compiler.javac}</executable>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>${httpcore.surefire.version}</version>
+        <configuration>
+          <jvm>${httpcore.surefire.java}</jvm>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-jar-plugin</artifactId>
@@ -189,5 +202,36 @@
 
     </plugins>
   </reporting>
+
+  <profiles>
+    <!--
+       Profile for running the build using JDK 1.3
+       (JAVA_1_3_HOME needs to be defined, e.g. in settings.xml or an environment variable)
+      -->
+    <profile>
+      <id>java-1.3</id>
+      <properties>
+        <httpcore.compiler.fork>true</httpcore.compiler.fork>
+        <httpcore.compiler.compilerVersion>1.3</httpcore.compiler.compilerVersion>
+        <httpcore.compiler.javac>${JAVA_1_3_HOME}/bin/javac</httpcore.compiler.javac>
+        <httpcore.surefire.java>${JAVA_1_3_HOME}/bin/java</httpcore.surefire.java>
+        <!-- Later versions of Surefire don't run with Java 1.3 -->
+        <httpcore.surefire.version>2.2</httpcore.surefire.version>
+      </properties>
+    </profile>
+    <!--
+       Profile for running the build using JDK 1.4
+       (JAVA_1_4_HOME needs to be defined, e.g. in settings.xml or an environment variable)
+      -->
+    <profile>
+      <id>java-1.4</id>
+      <properties>
+        <httpcore.compiler.fork>true</httpcore.compiler.fork>
+        <httpcore.compiler.compilerVersion>1.4</httpcore.compiler.compilerVersion>
+        <httpcore.compiler.javac>${JAVA_1_4_HOME}/bin/javac</httpcore.compiler.javac>
+        <httpcore.surefire.java>${JAVA_1_4_HOME}/bin/java</httpcore.surefire.java>
+      </properties>
+    </profile>
+  </profiles>
 
 </project>
