HttpCore 4.1-beta2 RC1
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.1-beta2-RC1@987889 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.1-beta2-SNAPSHOT</version>
+    <version>4.1-beta2</version>
   </parent>
   <artifactId>httpcore-nio</artifactId>
   <name>HttpCore NIO</name>
