Updated pom files; use maven plugin to generate LiCENSE and NOTICE resources
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1034159 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -37,16 +37,8 @@
   <description>
    AB clone based on HttpCore
   </description>
-  <url>http://hc.apache.org/httpcomponents-core</url>
+  <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>  
-
-  <licenses>
-    <license>
-      <name>Apache License</name>
-      <url>../LICENSE.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
 
   <dependencies>
     <dependency>
