--- a/httpcore-contrib/pom.xml
+++ b/httpcore-contrib/pom.xml
@@ -37,16 +37,8 @@
   <description>
    HttpComponents HttpCore - Contributed Components
   </description>
-  <url>http://hc.apache.org/httpcomponents-core</url>
+  <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
-
-  <licenses>
-    <license>
-      <name>Apache License</name>
-      <url>../LICENSE.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
 
   <dependencies>
     <dependency>
