--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
   <name>HttpComponents Core</name>
   <version>4.1.1-SNAPSHOT</version>
   <description>Core components to build HTTP enabled services</description>
-  <url>http://hc.apache.org/httpcomponents-core-ga/</url>
+  <url>http://hc.apache.org/httpcomponents-core</url>
   <inceptionYear>2005</inceptionYear>
   <packaging>pom</packaging>
 
