--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -138,6 +138,7 @@
       <plugin>
         <groupId>com.atlassian.maven.plugins</groupId>
         <artifactId>maven-clover2-plugin</artifactId>
+        <version>${clover.version}</version>
         <configuration>
           <jdk>1.4</jdk>
         </configuration>
