Save site updates
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/tags/4.1-siteupdate@1070327 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -37,7 +37,7 @@
   <description>
    AB clone based on HttpCore
   </description>
-  <url>http://hc.apache.org/httpcomponents-core-ga</url>
+  <url>http://hc.apache.org/httpcomponents-core</url>
   <packaging>jar</packaging>  
 
   <dependencies>
