--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.1.1-SNAPSHOT</version>
+    <version>4.2-alpha1-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore-ab</artifactId>
   <name>HttpCore AB clone</name>
