Updated dependency declarations; added Mockito as a test dependency
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1124208 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -59,6 +59,12 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -148,7 +154,7 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>clirr-maven-plugin</artifactId>
         <configuration>
-          <comparisonVersion>4.1</comparisonVersion>
+          <comparisonVersion>${comparisonVersion.version}</comparisonVersion>
         </configuration>
       </plugin>
 
