--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <junit.version>4.8.2</junit.version>
+    <mockito.version>1.8.5</mockito.version>
+    <comparisonVersion>4.0</comparisonVersion>
   </properties>
 
   <dependencyManagement>
@@ -83,6 +85,12 @@
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>${mockito.version}</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
