--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -73,7 +73,7 @@
             <Bundle-SymbolicName>${project.groupId}.httpcore</Bundle-SymbolicName>
             <Import-Package>!org.apache.http*,*</Import-Package>            
             <_exportcontents>org.apache.http.*;version=${project.version}</_exportcontents>
-            <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
+            <Embed-Dependency>*;scope=compile|runtime;inline=true</Embed-Dependency>
             <!-- Stop the JAVA_1_n_HOME variables from being treated as headers by Bnd -->
             <_removeheaders>JAVA_1_3_HOME,JAVA_1_4_HOME</_removeheaders>
           </instructions>
