Add version variables for report plugins
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1167666 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -124,6 +124,7 @@
 
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${hc.javadoc.version}</version>
         <configuration>
           <!-- reduce console output. Can override with -Dquiet=false -->
           <quiet>true</quiet>
@@ -154,6 +155,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>clirr-maven-plugin</artifactId>
+        <version>${hc.clirr.version}</version>
         <configuration>
           <comparisonVersion>${comparisonVersion.version}</comparisonVersion>
         </configuration>
@@ -161,10 +163,12 @@
 
       <plugin>
         <artifactId>maven-jxr-plugin</artifactId>
+        <version>${hc.jxr.version}</version>
       </plugin>
 
       <plugin>
         <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>${hc.surefire-report.version}</version>
       </plugin>
 
     </plugins>
