--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -124,6 +124,7 @@
 
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>${hc.javadoc.version}</version>
         <configuration>
           <!-- reduce console output. Can override with -Dquiet=false -->
           <quiet>true</quiet>
@@ -153,6 +154,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>clirr-maven-plugin</artifactId>
+        <version>${hc.clirr.version}</version>
         <configuration>
           <comparisonVersion>${comparisonVersion.version}</comparisonVersion>
         </configuration>
@@ -160,10 +162,12 @@
 
       <plugin>
         <artifactId>maven-jxr-plugin</artifactId>
+        <version>${hc.jxr.version}</version>
       </plugin>
 
       <plugin>
         <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>${hc.surefire-report.version}</version>
       </plugin>
 
     </plugins>
