--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,12 @@
     <mockito.version>1.8.5</mockito.version>
     <commons-logging.version>1.1.1</commons-logging.version>
     <comparisonVersion>4.1</comparisonVersion>
+    <!-- Delete these when using parent 5+ -->
+    <hc.clirr.version>2.3</hc.clirr.version>
+    <hc.javadoc.version>2.8</hc.javadoc.version>
+    <hc.jxr.version>2.3</hc.jxr.version>
+    <hc.surefire-report.version>2.9</hc.surefire-report.version>
+    <hc.project-info.version>2.4</hc.project-info.version>
   </properties>
 
   <dependencyManagement>
@@ -264,6 +270,7 @@
 
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
+         <version>${hc.project-info.version}</version><!-- needed for mvn site -->
          <reportSets>
            <reportSet>
              <reports>
