--- a/httpcore-benchmark/pom.xml
+++ b/httpcore-benchmark/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.1.4-SNAPSHOT</version>
+    <version>4.1.4</version>
   </parent>
   <artifactId>httpcore-benchmark</artifactId>
   <name>HttpCore Benchmarks</name>
