Simplified site content and assembly generation
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1233961 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,15 @@
       </plugin>
       <plugin>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>javadoc-aggregate</id>
+            <goals>
+              <goal>aggregate</goal>
+            </goals>
+            <phase>pre-site</phase>
+          </execution>
+        </executions>
         <configuration>
           <!-- reduce console output. Can override with -Dquiet=false -->
           <quiet>true</quiet>
@@ -203,6 +212,16 @@
             <scope>runtime</scope>
           </dependency>
         </dependencies>
+        <executions>
+          <execution>
+            <id>tutorial-site</id>
+            <goals>
+              <goal>generate-html</goal>
+              <goal>generate-pdf</goal>
+            </goals>
+            <phase>pre-site</phase>
+          </execution>
+        </executions>        
         <configuration>
           <includes>index.xml</includes>
           <chunkedOutput>true</chunkedOutput>
@@ -217,13 +236,14 @@
             </entity>
           </entities>
           <postProcess>
-            <copy todir="target/site/tutorial">
-              <fileset dir="target/docbkx">
+            <copy todir="target/site/tutorial/html" 
+              failonerror="false">
+              <fileset dir="target/docbkx/html/index">
                 <include name="**/*.html" />
-                <include name="**/*.pdf" />
               </fileset>
             </copy>
-            <copy todir="target/site/tutorial/html">
+            <copy todir="target/site/tutorial/html" 
+              failonerror="false">
               <fileset dir="src/docbkx/resources">
                 <include name="**/*.css" />
                 <include name="**/*.png" />
@@ -231,7 +251,9 @@
                 <include name="**/*.jpg" />
               </fileset>
             </copy>
-            <move file="target/site/tutorial/pdf/index.pdf" tofile="target/site/tutorial/pdf/httpcore-tutorial.pdf" failonerror="false" />
+            <copy file="target/docbkx/pdf/index.pdf" 
+                  tofile="target/site/tutorial/pdf/httpcore-tutorial.pdf" 
+                  failonerror="false"/>
           </postProcess>
         </configuration>
       </plugin>
