Fixed API comparison version used by Clirr plugin
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1238564 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -156,7 +156,7 @@
         <artifactId>clirr-maven-plugin</artifactId>
         <version>${hc.clirr.version}</version>
         <configuration>
-          <comparisonVersion>${comparisonVersion.version}</comparisonVersion>
+          <comparisonVersion>${api.comparison.version}</comparisonVersion>
         </configuration>
       </plugin>
 
