--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
     <junit.version>4.9</junit.version>
     <mockito.version>1.8.5</mockito.version>
     <commons-logging.version>1.1.1</commons-logging.version>
-    <comparisonVersion>4.1</comparisonVersion>
+    <api.comparison.version>4.1</api.comparison.version>
   </properties>
 
   <dependencyManagement>
