Moved clirr report definition to top pom.xml
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1239183 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -299,6 +299,15 @@
          </reportSets>
       </plugin>
 
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>clirr-maven-plugin</artifactId>
+        <version>${hc.clirr.version}</version>
+        <configuration>
+          <comparisonVersion>${api.comparison.version}</comparisonVersion>
+        </configuration>
+      </plugin>
+
     </plugins>
   </reporting>
 
