Include AB module
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1299003 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
     <module>httpcore</module>
     <module>httpcore-nio</module>
     <module>httpcore-osgi</module>
+    <module>httpcore-ab</module>
   </modules>
 
   <properties>
