--- a/httpcore-contrib/pom.xml
+++ b/httpcore-contrib/pom.xml
@@ -27,15 +27,11 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>org.apache.httpcomponents</groupId>
-    <artifactId>httpcomponents-core</artifactId>
-    <version>4.2-beta2-SNAPSHOT</version>
-  </parent>
   <artifactId>httpcore-contrib</artifactId>
   <name>HttpCore Contrib</name>
+  <version>SNAPSHOT</version>
   <description>
-   HttpComponents HttpCore - Contributed Components
+   HttpComponents HttpCore - Contributed Components (distributed as source only)
   </description>
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
