--- a/httpcore-contrib/pom.xml
+++ b/httpcore-contrib/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.2.1-SNAPSHOT</version>
+    <version>4.2.1</version>
   </parent>
   <artifactId>httpcore-contrib</artifactId>
   <name>HttpCore Contrib</name>
