--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -53,6 +53,11 @@
       <version>1.2</version>
       <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
