--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
             </goals>
             <phase>pre-site</phase>
           </execution>
-        </executions>        
+        </executions>
         <configuration>
           <includes>index.xml</includes>
           <chunkedOutput>true</chunkedOutput>
@@ -293,7 +293,7 @@
             <id>validate</id>
             <phase>validate</phase>
             <configuration>
-              <configLocation>hc-checkstyle.xml</configLocation>
+              <configLocation>${basedir}/hc-checkstyle.xml</configLocation>
               <consoleOutput>true</consoleOutput>
               <failsOnError>true</failsOnError>
               <linkXRef>false</linkXRef>
