Fixing checkstyle plugin metadata for sub modules
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1425308 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -40,6 +40,15 @@
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>  
 
+  <properties>
+    <!-- default compiler and surefire plugin settings for "java" profiles -->
+    <httpcore.compiler.fork>false</httpcore.compiler.fork>
+    <httpcore.compiler.compilerVersion />
+    <httpcore.compiler.javac />
+    <httpcore.surefire.java />
+    <main.basedir>${project.parent.basedir}</main.basedir>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
