developed by => developed at : see http://www.apache.org/legal/reports.html#2006-05-24 section 6C
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/branches/4.2.x@1440720 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
     <api.comparison.version>4.2</api.comparison.version>
   </properties>
 
+<prerequisites>
+  <maven>2.2.1</maven>
+</prerequisites>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
