asl2.header is a source file so needs EOL conversion
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1459591 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/assembly/build.xml
+++ b/src/main/assembly/build.xml
@@ -27,7 +27,7 @@
 
   <!-- Use property to define the source file types, as it is needed twice -->
   <property name="src.file.types" 
-  	value="**/*.txt **/*.xml **/*.properties **/*.java **/*.html **/*.css **/*.apt **/*.xsl"/>
+  	value="asl2.header **/*.txt **/*.xml **/*.properties **/*.java **/*.html **/*.css **/*.apt **/*.xsl"/>
 
   <target name="fixarchives" depends="_eolcheck,fixzip,fixtgz">
   </target>
