Upgraded Clover2 plugin to version 3.1.10.1; fixed Clover2 metadata; Clover profile can now be executed with Maven 3.0.x
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1460553 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -69,8 +69,41 @@
           </instructions>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-clover2-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>clirr-maven-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
     </plugins>
     <finalName>org.apache.httpcomponents.httpcore_${project.version}</finalName>
   </build>
 
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>com.atlassian.maven.plugins</groupId>
+        <artifactId>maven-clover2-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>clirr-maven-plugin</artifactId>
+        <version>${hc.clirr.version}</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
