Code cleanups (courtesy of IntelliJ Idea code inspector)
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1487830 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -91,7 +91,7 @@
           <source>${maven.compile.source}</source>
           <target>${maven.compile.target}</target>
           <optimize>${maven.compile.optimize}</optimize>
-          <showDeprecations>${maven.compile.deprecation}</showDeprecations>
+          <showDeprecation>${maven.compile.deprecation}</showDeprecation>
         </configuration>
       </plugin>
       <plugin>
