--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
   </modules>
 
   <properties>
+    <maven.compile.deprecation>false</maven.compile.deprecation>
     <junit.version>4.9</junit.version>
     <mockito.version>1.8.5</mockito.version>
     <commons-logging.version>1.1.1</commons-logging.version>
