Fixed duplicate N&L problem by removing maven-notice-plugin in favor of maven-remote-resource-plugin included through Apache parent POM
git-svn-id: https://svn.apache.org/repos/asf/httpcomponents/httpcore/trunk@1504830 13f79535-47bb-0310-9956-ffa450edef68

--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -33,7 +33,7 @@
     <version>4.3-beta3-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore-nio</artifactId>
-  <name>HttpCore NIO</name>
+  <name>Apache HttpCore NIO</name>
   <inceptionYear>2005</inceptionYear>
   <description>
    HttpComponents Core (non-blocking I/O)
