--- a/httpcore-osgi/pom.xml
+++ b/httpcore-osgi/pom.xml
@@ -33,7 +33,7 @@
     <version>4.3-beta3-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore-osgi</artifactId>
-  <name>HttpCore OSGi bundle</name>
+  <name>Apache HttpCore OSGi bundle</name>
   <inceptionYear>2005</inceptionYear>
   <description>
    HttpComponents Core (OSGi bundle)
