--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -33,7 +33,7 @@
     <version>4.3-beta3-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore</artifactId>
-  <name>HttpCore</name>
+  <name>Apache HttpCore</name>
   <inceptionYear>2005</inceptionYear>
   <description>
    HttpComponents Core (blocking I/O)
