--- a/httpcore-ab/pom.xml
+++ b/httpcore-ab/pom.xml
@@ -33,7 +33,7 @@
     <version>4.2.5-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore-ab</artifactId>
-  <name>HttpCore AB clone</name>
+  <name>Apache HttpCore Benchmarking Tool</name>
   <description>
    AB clone based on HttpCore
   </description>
