--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
     <mockito.version>1.8.5</mockito.version>
     <commons-logging.version>1.1.3</commons-logging.version>
     <api.comparison.version>4.2</api.comparison.version>
+    <hc.stylecheck.version>1</hc.stylecheck.version>
   </properties>
 
   <dependencyManagement>
@@ -235,7 +236,7 @@
           <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>hc-stylecheck</artifactId>
-            <version>1</version>
+            <version>${hc.stylecheck.version}</version>
           </dependency>
         </dependencies>
         <configuration>
