--- a/httpcore/pom.xml
+++ b/httpcore/pom.xml
@@ -41,14 +41,6 @@
   <url>http://hc.apache.org/httpcomponents-core-ga</url>
   <packaging>jar</packaging>
 
-  <properties>
-    <!-- default compiler and surefire plugin settings for "java" profiles -->
-    <httpcore.compiler.fork>false</httpcore.compiler.fork>
-    <httpcore.compiler.compilerVersion />
-    <httpcore.compiler.javac />
-    <httpcore.surefire.java />
-  </properties>
-
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -77,27 +69,6 @@
         </includes>
       </resource>
     </resources>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>${maven.compile.source}</source>
-          <target>${maven.compile.target}</target>
-          <optimize>${maven.compile.optimize}</optimize>
-          <showDeprecation>${maven.compile.deprecation}</showDeprecation>
-          <fork>${httpcore.compiler.fork}</fork>
-          <compilerVersion>${httpcore.compiler.compilerVersion}</compilerVersion>
-          <executable>${httpcore.compiler.javac}</executable>
-        </configuration>
-      </plugin>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <jvm>${httpcore.surefire.java}</jvm>
-        </configuration>
-      </plugin>
-    </plugins>
   </build>
 
   <reporting>
@@ -109,7 +80,7 @@
         <configuration>
           <!-- reduce console output. Can override with -Dquiet=false -->
           <quiet>true</quiet>
-          <source>${maven.compile.source}</source>
+          <source>${maven.compiler.source}</source>
           <links>
             <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
           </links>
