--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,8 @@
   </modules>
 
   <properties>
-    <maven.compile.deprecation>false</maven.compile.deprecation>
+    <!-- Override parent 7 setting for deprecation (only - other settings stand)-->
+    <maven.compiler.showDeprecation>false</maven.compiler.showDeprecation>
     <junit.version>4.9</junit.version>
     <mockito.version>1.8.5</mockito.version>
     <commons-logging.version>1.1.3</commons-logging.version>
@@ -146,7 +147,7 @@
         <configuration>
           <!-- reduce console output. Can override with -Dquiet=false -->
           <quiet>true</quiet>
-          <source>${maven.compile.source}</source>
+          <source>${maven.compiler.source}</source>
           <links>
             <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
           </links>
