--- a/httpcore-nio/pom.xml
+++ b/httpcore-nio/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>org.apache.httpcomponents</groupId>
     <artifactId>httpcomponents-core</artifactId>
-    <version>4.3-beta3-SNAPSHOT</version>
+    <version>4.3.1-SNAPSHOT</version>
   </parent>
   <artifactId>httpcore-nio</artifactId>
   <name>Apache HttpCore NIO</name>
