--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
     <junit.version>4.9</junit.version>
     <mockito.version>1.8.5</mockito.version>
     <commons-logging.version>1.1.3</commons-logging.version>
-    <api.comparison.version>4.2</api.comparison.version>
+    <api.comparison.version>4.3</api.comparison.version>
     <hc.stylecheck.version>1</hc.stylecheck.version>
   </properties>
 
@@ -298,6 +298,15 @@
         <configuration>
           <comparisonVersion>${api.comparison.version}</comparisonVersion>
         </configuration>
+        <executions>
+          <execution>
+            <id>compatibility-check</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
